updated search products
